--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,15 @@
   </h1>
 </div>
 
+<nav>
+  <a routerLink="/">Home</a>
+  <br>
+  <a routerLink="/account">Account</a>
+  <br>
+  <a routerLink="/login">Login</a>
+  <br>
+  <a routerLink="/register">Register</a>
+</nav>
 
 <router-outlet></router-outlet>
+<app-message></app-message>
