--- a/src/app/components/reddit/reddit.component.html
+++ b/src/app/components/reddit/reddit.component.html
@@ -1,7 +1,11 @@
 <p>
   reddit works!
 </p>
-<h1>
-  {{name}}
-</h1>
-<app-post-list></app-post-list>
+
+<div *ngIf="subreddit; else emptySubreddit"><h1>
+  {{subreddit.name}}
+</h1></div>
+<ng-template #emptySubreddit> This subreddit does not exist </ng-template>
+
+<app-account-small></app-account-small>
+<app-post-list [subredditName]="subreddit.name"></app-post-list>
