--- a/src/app/components/reddit/reddit.component.html
+++ b/src/app/components/reddit/reddit.component.html
@@ -6,6 +6,7 @@
   {{subreddit.name}}
 </h1></div>
 <ng-template #emptySubreddit> This subreddit does not exist </ng-template>
-
+<br>
 <app-account-small></app-account-small>
-<app-post-list [subredditName]="subreddit.name"></app-post-list>
+<br>
+<app-post-list [subredditName]="name"></app-post-list>
