added creator name to post-small

--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -1,4 +1,4 @@
 <p>
   post-list works!
 </p>
-<div *ngFor="let post of posts"> {{post.creatorId}} <br> <h5>{{post.content}}</h5></div>
+<div *ngFor="let post of posts"> {{post.creator.name}} <br> <h5>{{post.content}}</h5></div>
