--- a/src/app/components/account-small/account-small.component.html
+++ b/src/app/components/account-small/account-small.component.html
@@ -1,5 +1,7 @@
 <p>
   account-small works!
 </p>
+<div>
 <div *ngIf="loggedIn; else pleaseLogin"> welcome back! <br><button (click)="logout()">logout</button></div>
 <ng-template #pleaseLogin> You are currently not logged in,<br><button routerLink="/login">click here to log in</button></ng-template>
+</div>
