--- a/src/app/components/message/message.component.html
+++ b/src/app/components/message/message.component.html
@@ -2,8 +2,10 @@
 <div *ngIf="messageService.messages.length">
 
   <h2>Messages</h2>
-  <button class="clear"
-          (click)="messageService.clear()">clear</button>
-  <div *ngFor='let message of messageService.messages'> {{message}} </div>
+  <button class="clear" (click)="messageService.clear()">clear</button>
+  <ul>
+    <li *ngFor='let message of messageService.messages'> {{message}} </li>
+  </ul>
+
 
 </div>
