--- a/src/app/components/reddit/reddit.component.html
+++ b/src/app/components/reddit/reddit.component.html
@@ -3,7 +3,7 @@
 </p>
 <app-account-small></app-account-small>
 <div>
-<div *ngIf="subreddit; else emptySubreddit"><h1>
+<div style="text-align:center" *ngIf="subreddit; else emptySubreddit"><h1>
   {{subreddit.name}}
 </h1></div>
 <ng-template #emptySubreddit> This subreddit does not exist </ng-template>
