--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,3 +1,34 @@
 <p>
   register works!
 </p>
+<div>
+  <h2>Register a new account:</h2>
+  <h4 *ngIf="submitted">Something went wrong please try again.</h4>
+  <form (ngSubmit)="onRegister()" #registerForm="ngForm">
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="text" class="form-control" id="email" required [(ngModel)]="email" #emailCheck="ngModel">
+    </div>
+    <div [hidden]="emailCheck.valid || emailCheck.pristine">
+      a valid email is required
+    </div>
+    <div class="form-group">
+      <label for="name">Display name</label>
+      <input type="text" class="form-control" id="name" required [(ngModel)]="name" #nameCheck="ngModel">
+    </div>
+    <div [hidden]="nameCheck.valid || nameCheck.pristine">
+      a display name is required
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="password" required [(ngModel)]="password" #passwordCheck="ngModel">
+    </div>
+    <div [hidden]="passwordCheck.valid || passwordCheck.pristine">
+      password is required
+    </div>
+    <button type="submit" [disabled]="emailCheck.invalid || passwordCheck.invalid || nameCheck.invalid">Register</button>
+
+  </form>
+  <label for="loginButton">already have an account? click here to login</label>
+  <button id="loginButton" routerLink="/login">Login</button>
+</div>
