made easy to change subreddits

--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -3,7 +3,7 @@
 </p>
 <div>
   <ul>
-  <li *ngFor="let post of posts"> <b>{{post.title}}</b> <br>{{post.content}} <br> <i>posted by:{{post.creator.name}}</i></li>
+    <li *ngFor="let post of posts"> <b>{{post.title}}</b> <br>{{post.content}} <br> <i>posted by:{{post.creator.name}} -- in <a routerLink="/r/{{post.subreddit.name}}">r/{{post.subreddit.name}}</a></i></li>
 </ul>
 </div>
 
